[package]
name = "opencolorio"
version = "0.1.0"
authors = ["Scott Wilson <scott@propersquid.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "Rust bindings for OpenColorIO (placeholder)"
keywords = ["vfx", "animation", "cg", "opencolorio", "ocio"]
categories = ["api-bindings"]
homepage = "https://www.github.com/scott-wilson/OpenColorIO-rs"
documentation = "https://docs.rs/OpenColorIO"
repository = "https://www.github.com/scott-wilson/OpenColorIO-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
